k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sdodev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdodev
  template:
    metadata:
      labels:
        app: sdodev
    spec:
      containers:
      - name: sdodev
        image: delsynn/sdo:dev
        ports:
        - containerPort: 80
