k8s/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sdodev
spec:
  selector:
    app: sdodev
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
