k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdodev
spec:
  rules:
  - host: sdodev.38.cc.ucll.cloud  # Update with your desired domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdodev
            port:
              number: 80
